--- a/Angular/src/index.html
+++ b/Angular/src/index.html
@@ -15,6 +15,8 @@
 <script src="https://psc.igaptechnologies.com/assets/admin/js/jquery-3.2.1.min.js"></script>
 
 <script src="https://html2canvas.hertzen.com/dist/html2canvas.js"></script>
+<script src="https://unpkg.com/konva@9.0.0/konva.min.js"></script>
+
 </head>
 <body>
   <app-root></app-root>
